<resources>
    <string name="app_name">CALCULADORA</string>
    <string name="btdiv">/</string>
    <string name="btpor">*</string>
    <string name="bt5">5</string>
    <string name="bt7">7</string>
    <string name="bt8">8</string>
    <string name="bt9">9</string>
    <string name="textview">TextView</string>
    <string name="btres"><![CDATA[<=]]></string>
    <string name="bt4">4</string>
    <string name="bt6">6</string>
    <string name="bt1">1</string>
    <string name="bt2">2</string>
    <string name="bt3">3</string>
    <string name="bt0">0</string>
    <string name="btigu">=</string>
    <string name="btmas">+</string>
    <string name="btmenos">-</string>

</resources>
